--- a/application/views/_formation.phtml
+++ b/application/views/_formation.phtml
@@ -1,3 +1,8 @@
+<?php if(count($this->formation)<11){ ?>
+    <div class="alert alert-warning lessthan11">
+        Du hast derzeit weniger als 11 Spieler aufgestellt! Nicht gut! Könnte in einem Match evtl. einen entscheidenden Nachteil darstellen. Stelle sicher dass du möglichst viele Spieler aufgestellt hast!
+    </div>
+<?php } ?>
 <div class="pitch" id="pitch">
     <div class="formation">
         <div class="offense line">
