Facebook Updated, Bugfixes in Match Logic (critical), Bootstrap CSS

--- a/application/modules/game/views/scripts/layout.phtml
+++ b/application/modules/game/views/scripts/layout.phtml
@@ -22,7 +22,7 @@
         ->prependStylesheet('/css/skillgame.css')
         ->prependStylesheet('/css/match.css')
         ->prependStylesheet('/css/typeahead.css')
-        ->prependStylesheet('/css/bootstrap.css'); ?>
+        ->prependStylesheet('/css/bootstrap.min.css'); ?>
 
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Squada+One|Roboto:400,300,900' rel='stylesheet' type='text/css'>
