--- a/application/modules/game/views/scripts/layout.phtml
+++ b/application/modules/game/views/scripts/layout.phtml
@@ -43,7 +43,7 @@
     <script src="//connect.facebook.net/en_US/all.js"></script>
 </head>
 <body>
-<?php echo $this->facebook(FB_APP_ID)->initialize(); ?>
+<?php //echo $this->facebook(FB_APP_ID)->initialize(); ?>
 <div class="navbar navbar-inverse navbar-fixed-top bs-docs-nav">
     <div class="container">
         <a href="<?php echo HTTP_ROOT ?>/game" class="navbar-brand"><?php echo SITE_NAME; ?></a>
