Game logic frontend and backend refined, Skillgame for shooting works

--- a/application/modules/game/views/scripts/layout.phtml
+++ b/application/modules/game/views/scripts/layout.phtml
@@ -74,7 +74,7 @@
         <?php } ?>
     </div>
 </div>
-<div class="container">
+<div>
     <div class="main">
         <?php /* TODO: Escape HTML Chars in breadcrumb */ //echo $this->navigation()->breadcrumbs()->render();?>
         <?php if($this->title){ ?>
