--- a/public/css/game.css
+++ b/public/css/game.css
@@ -29,6 +29,9 @@ h1,h2,h3,h4,h5{
 h1{
     font-size: 48px;
 }
+.main{
+    padding: 0 20px;
+}
 .main h2{
     font-size: 32px;
     text-align: left;
