Cleaned Public Directory and added Bower components, adjustments for SASS integration CSS

--- a/app/styles/_skillgame.scss
+++ b/app/styles/_skillgame.scss
@@ -21,7 +21,7 @@
 }
 
 #skillgame .background{
-    background-image: url(images/penalty.jpg);
+    background-image: url(../../public/css/images/penalty.jpg);
     width: 450px;
     height: 430px;
     position: relative;
