--- a/app/styles/_game.scss
+++ b/app/styles/_game.scss
@@ -16,7 +16,7 @@ body{
     color: #000;
     font-weight: 400;
     font-size: 13px;
-    /*background-image: url("images/handmadepaper.png");*/
+    background-image: url("images/handmadepaper.png");
     background-color: #FCFCFC;
     padding-top: 50px;
 }
