--- a/app/styles/_match.scss
+++ b/app/styles/_match.scss
@@ -93,7 +93,7 @@
     height: 30px;
     margin-left: -15px;
     margin-top: -15px;
-    background-image: url(images/ball.png);
+    background-image: url(../../public/css/images/ball.png);
     background-repeat: no-repeat;
     background-size: 100%;
     z-index: 90;
