--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,10 +2,19 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 @import "compass/css3";
 
 @import 'sass-bootstrap/lib/bootstrap';
+@import 'components-font-awesome/scss/font-awesome';
 
 @import '_mixins';
 @import '_breakpoints';
 @import '_variables';
+
+@import url(http://fonts.googleapis.com/css?family=Squada+One);
+
+@import '_game';
+@import '_match';
+@import '_ranking';
+@import '_roster';
+@import '_skillgame';
 
 /* --------------------------------------------------------------- */
 /* ---------------------  GENERAL STYLES ------------------------- */
